<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/metal"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ControladorPuestos">>

    <TableLayout
        android:id="@+id/stadistic_table"
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:alpha="0.65"
        android:background="#FFF5D8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFEAAC">

            <TextView
                android:id="@+id/puestos"
                android:layout_width="95dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/Puesto"
                android:textSize="24sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/users"
                android:layout_width="180dp"
                android:layout_height="53dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/Users"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/velocidades"
                android:layout_width="135dp"
                android:layout_height="53dp"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/vel"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u1"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v1"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P2"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u2"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v2"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P3"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u3"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v3"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P4"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u4"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v4"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto5"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P5"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u5"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v5"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto6"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P6"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u6"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v6"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto7"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P7"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u7"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v7"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto8"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P8"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u8"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v8"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto9"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P9"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u9"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v9"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

        <TableRow
            android:layout_width="50dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/puesto10"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:text="@string/P10"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/u10"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/v10"
                android:layout_width="88dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:textSize="24sp" />
        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/volver_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.6"
        android:background="@color/darkGrey"
        android:onClick="MenuPrincipal"
        android:text="@string/men_principal"
        android:textColor="@color/lightGrey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/siguiente_btn"
        app:layout_constraintHorizontal_bias="0.312"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/siguiente_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="32dp"
        android:alpha="0.6"
        android:background="@color/green"
        android:text="@string/Sig"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.817"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>